:sparkles: [#371] Implementing filtering publications by owner group
